--- a/about.html
+++ b/about.html
@@ -3,6 +3,9 @@ layout: page
 title: About
 ---
 
+<div class = "row" style = "min-height: 100px;">
+</div>
+
 <div class = "row" style = "margin-top: 100px; margin-bottom: 100px">
 	<div class="col-lg-5 col-md-8">
 		<img src="{{site.baseurl}}/img/showhost.jpg" alt = "Show Host" style = "width:100%;max-width:400px" align = "middle">
