--- a/404.html
+++ b/404.html
@@ -5,9 +5,10 @@ title: 404
 ---
 <hr class="custom m-0">
 <div class="container text-center my-5">
-  <h1 class="display-1">404</h1>
+  <h1 class="display-1">Page not found</h1>
 
-  <p class="mb-1"><strong>Page not found :(</strong></p>
-  <p class="mb-5">The requested page could not be found.</p>
+  <p class="mb-1"><strong>You're a true visionary.</strong></p>
+  <p class="mb-5">However, the page can't be found. The link you used might be old or it moved.</p>
   <a href="/" class="btn btn-primary btn-xl">Return Home</a>
 </div>
+
